# HelerisFW

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  LICENSE  README.md  coding_style.md  contributors.md  future_rote.md  fw.h
examples/: basic_loop.c  basic_window.c
include/: Disclaimer.md
include/glad/: glad.h
include/heleris/fw/: fw.h  gl_context.h  types.h  window.h
include/heleris/fw/content/: content_loader.h  texture.h
include/heleris/fw/elements/: color.h  rectangle.h  size.h  size2.h  vector2.h  vector3.h
include/heleris/fw/errors/: error.h  error_codes.h  error_presets.h
include/heleris/fw/graphics/: device_graphics.h  render.h  render_options.h  shader.h  shader_program.h  vao.h  vbo.h
include/heleris/fw/math/: math.h
include/heleris/fw/types/: bool.h  primitives.h
includes/: Disclaimer.md
includes/heleris/fw/: gl_context.h
includes/heleris/fw/elements/: click_context.h  color.h  vector2.h
includes/heleris/fw/errors/: error.h  error_presets.h
includes/heleris/fw/types/: primitives.h  string.h
src/: gl_context.c  main.c  types.h  window.c
src/elements/: color.c
src/elements/headers/: click_context.h  color.h  rectangle.h  size2.h  vector2.h
src/error_handle/headers/: error_printer.h
src/headers/: error_codes.h  gl_context.h  window.h
src/heleris/fw/: gl_context.c  window.c
src/heleris/fw/content/: content_loader.c  texture.c
src/heleris/fw/elements/: color.c  rectangle.c  size.c  size2.c  vector2.c  vector3.c
src/heleris/fw/errors/: error.c  error_presets.c
src/types/: bool.h  primitives.h  string.h
(+11 files in other folders)
